# aws-lambda-python3-websocket-vue3-demo

./: .gitignore  .in  README.md  config.json  notes.txt  todo.md
backend/: .in  handler.py  package-lock.json  package.json  pyproject.toml  requirements.txt  serverless.yml
backend/app/: config.py  control.py  data.py  dynstream.py  event.py  jwt.py  websocket.py
frontend/: index.html  package-lock.json  package.json  tsconfig.app.json  vite.config.ts
frontend/src/: App.vue  env.d.ts  main.ts
frontend/src/components/: Grid.vue  HelloWorld.vue
frontend/src/lib/: auth.ts  config.ts  grid.ts  types.ts
frontend/src/router/: index.ts
frontend/src/stores/: auth.ts  general.ts
frontend/src/views/: HomePage.vue  Login.vue  Profile.vue
tf/: cognito.tf  data.tf  dynamodb.tf  iam_deploy.tf  iam_exec.tf  main.tf  s3_cloudfront.tf  secrets.tf  sns.tf
